--- a/schoolmanage-project/sm-business/src/main/webapp/WEB-INF/web.xml
+++ b/schoolmanage-project/sm-business/src/main/webapp/WEB-INF/web.xml
@@ -53,15 +53,13 @@
 	<!-- 还可以用ContextServlet加载不推荐 在有些服务器不支持listener方式只能用servlet方式 一般用listener 因为listener比servlet优先级高 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value><!-- 可以指定例/WEB-INF/.. -->
+		<param-value>classpath:applicationContext.xml,classpath*:META-INF/spring.xml</param-value><!-- 可以指定例/WEB-INF/.. -->
 	</context-param>
 	<!-- 对Spring容器进行实例化 -->
 	<listener>
-		<listener-class>
-			org.springframework.web.context.ContextLoaderListener
-		</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	<!--使用spring中的opensessioninview来解决懒加载的问题 本质是一个过滤器 -->
+	<!--使用spring中的opensessioninview来解决懒加载的问题 本质是一个过滤器 
 	<filter>
 		<filter-name>OpenSessionInViewFilter</filter-name>
 		<filter-class>
@@ -71,7 +69,7 @@
 	<filter-mapping>
 		<filter-name>OpenSessionInViewFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping>-->
 	
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
