--- a/schoolmanage-project/sm-business/src/main/webapp/WEB-INF/web.xml
+++ b/schoolmanage-project/sm-business/src/main/webapp/WEB-INF/web.xml
@@ -59,7 +59,7 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	<!--使用spring中的opensessioninview来解决懒加载的问题 本质是一个过滤器 
+	<!--使用spring中的opensessioninview来解决懒加载的问题 本质是一个过滤器 -->
 	<filter>
 		<filter-name>OpenSessionInViewFilter</filter-name>
 		<filter-class>
@@ -69,7 +69,7 @@
 	<filter-mapping>
 		<filter-name>OpenSessionInViewFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>-->
+	</filter-mapping>
 	
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
